wip on 1-moment micro

--- a/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M.yml
+++ b/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M.yml
@@ -12,7 +12,7 @@ vert_diff: "true"
 idealized_insolation: false
 z_max: 45000.0
 precip_model: "1M"
-regression_test: true
+regression_test: false
 job_id: "sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M"
 moist: "equil"
 toml: [toml/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res.toml]
