--- a/Project.toml
+++ b/Project.toml
@@ -69,11 +69,11 @@ IntervalSets = "0.5, 0.6, 0.7"
 Krylov = "0.9"
 LinearAlgebra = "1"
 Logging = "1"
-NCDatasets = "0.11, 0.12, <0.13"
+NCDatasets = "0.11, 0.12, 0.13"
 NVTX = "0.3"
 Pkg = "1.8"
 Printf = "1"
-RRTMGP = "0.9.2"
+RRTMGP = "0.9.3"
 Random = "1"
 RootSolvers = "0.2, 0.3, 0.4"
 SciMLBase = "1, 2"
