Restore to Project.toml and Manifest.toml to current main

--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
 DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
+HDF5_jll = "0234f1f7-429e-5d53-9886-15a909be8d59"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Insolation = "e98cc03f-d57e-4e3c-b70c-8d51efe9e0d8"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
@@ -29,7 +30,6 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
-OpenMPI_jll = "fe0851c0-eecd-5654-98d4-656369965a5c"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 RRTMGP = "a01a1ee8-cea4-48fc-987c-fc7878d79da1"
@@ -49,8 +49,8 @@ ArgParse = "1"
 ArtifactWrappers = "0.2"
 Artifacts = "1"
 AtmosphericProfilesLibrary = "0.1"
-CLIMAParameters = "0.7.24"
-ClimaComms = "0.5.5"
+CLIMAParameters = "0.7.25"
+ClimaComms = "0.5.6"
 ClimaCore = "0.10.55"
 ClimaTimeSteppers = "0.7.14"
 CloudMicrophysics = "0.15.0"
@@ -61,7 +61,9 @@ DiffEqBase = "6"
 DiffEqCallbacks = "2"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5, 1"
+HDF5_jll = "~1.12"
 ImageFiltering = "0.7"
+Insolation = "0.6"
 Interpolations = "0.14"
 IntervalSets = "0.5, 0.6, 0.7"
 Krylov = "0.9"
