--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -37,6 +37,7 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
 NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
 NVTX = "5da4648a-3479-48b8-97b9-01cb529c0a1f"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
@@ -79,7 +80,6 @@ CloudMicrophysics = "0.15"
 DiffEqNoiseProcess = "5"
 ForwardDiff = "0.10"
 Glob = "1"
-Insolation = "0.7"
 JET = "0.7, 0.8"
 JSON = "0.21"
 OrderedCollections = "1"
