add prognostic edmf stretched grid bomex

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -588,8 +588,8 @@ steps:
       - label: ":genie: Diagnostic EDMFX aquaplanet with TKE"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file $CONFIG_PATH/diagnostic_edmfx_aquaplanet_tke.yml
-        artifact_paths: "diagnostic_edmfx_aquaplanet_tke/*"
+          --config_file $CONFIG_PATH/diagnostic_edmfx_aquaplanet.yml
+        artifact_paths: "diagnostic_edmfx_aquaplanet/*"
         agents:
           slurm_mem: 20GB
       
@@ -617,7 +617,6 @@ steps:
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/prognostic_edmfx_bomex_fixtke_box.yml
         artifact_paths: "prognostic_edmfx_bomex_fixtke_box/*"
-        soft_fail: true
         agents:
           slurm_mem: 20GB
       
@@ -626,7 +625,14 @@ steps:
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/prognostic_edmfx_bomex_box.yml
         artifact_paths: "prognostic_edmfx_bomex_box/*"
-        soft_fail: true
+        agents:
+          slurm_mem: 20GB
+      
+      - label: ":genie: Prognostic EDMFX Bomex stretched grid in a box"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl
+          --config_file $CONFIG_PATH/prognostic_edmfx_bomex_stretched_box.yml
+        artifact_paths: "prognostic_edmfx_bomex_stretched_box/*"
         agents:
           slurm_mem: 20GB
 
@@ -643,7 +649,6 @@ steps:
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/prognostic_edmfx_rico_column.yml
         artifact_paths: "prognostic_edmfx_rico_column/*"
-        soft_fail: true
         agents:
           slurm_mem: 20GB
 
@@ -652,7 +657,14 @@ steps:
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/prognostic_edmfx_trmm_column.yml
         artifact_paths: "prognostic_edmfx_trmm_column/*"
-        soft_fail: true
+        agents:
+          slurm_mem: 20GB
+      
+      - label: ":genie: Prognostic EDMFX aquaplanet"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl
+          --config_file $CONFIG_PATH/prognostic_edmfx_aquaplanet.yml
+        artifact_paths: "prognostic_edmfx_aquaplanet/*"
         agents:
           slurm_mem: 20GB
 
