Update to Aqua 0.8
https://github.com/JuliaTesting/Aqua.jl/issues/228

--- a/Project.toml
+++ b/Project.toml
@@ -55,6 +55,7 @@ ClimaCore = "0.10.55"
 ClimaTimeSteppers = "0.7.14"
 CloudMicrophysics = "0.15.0"
 Colors = "0.12"
+CPUSummary = "0.2"
 Dates = "1"
 Dierckx = "0.5"
 DiffEqBase = "6"
