--- a/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M.yml
+++ b/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M.yml
@@ -1,17 +1,18 @@
 rad: "allskywithclear"
-dt_save_to_disk: "10secs"
+dt_save_to_disk: "18hours"
 rayleigh_sponge: true
 orographic_gravity_wave: "gfdl_restart"
 z_elem: 25
-dt: "10secs"
+dt: "400secs"
 surface_setup: "DefaultMoninObukhov"
-t_end: "100secs"
+t_end: "18hours"
 non_orographic_gravity_wave: true
 dz_bottom: 300.0
 vert_diff: "true"
 idealized_insolation: false
 z_max: 45000.0
 precip_model: "1M"
+precip_upwinding: "first_order"
 regression_test: false
 job_id: "sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M"
 moist: "equil"
