--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -96,6 +96,14 @@ steps:
         command: "julia --color=yes --project=examples test/orographic_gravity_wave/ogwd_3d.jl"
         artifact_paths: "orographic_gravity_wave_test_3d/*"
 
+  - group: "Precipitation"
+    steps:
+      - label: ":umbrella: 1-moment precipitation sanity test single column"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl
+          --config_file $CONFIG_PATH/single_column_precipitation_test.yml
+        artifact_paths: "single_column_precipitation_test/*"
+
   - group: "Column Examples"
     steps:
 
@@ -240,7 +248,7 @@ steps:
           --job_id sphere_baroclinic_wave_rhoe_equilmoist
           --out_dir sphere_baroclinic_wave_rhoe_equilmoist
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist/*"
-      
+
       - label: ":computer: no lim ARS baroclinic wave (ρe) equilmoist explicit vertdiff"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
@@ -327,6 +335,22 @@ steps:
           --nc_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res
           --fig_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res --case_name aquaplanet
         artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res/*"
+        agents:
+          slurm_mem: 20GB
+
+      - label: ":computer: aquaplanet (ρe_tot) equilmoist allsky radiation monin_obukhov varying insolation gravity wave (gfdl_restart) high top with 1-moment micro"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl
+          --config_file $CONFIG_PATH/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M.yml
+
+          julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl
+          --data_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M
+          --out_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M
+
+          julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl
+          --nc_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M
+          --fig_dir sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M --case_name aquaplanet
+        artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res_1M/*"
         agents:
           slurm_mem: 20GB
 
@@ -576,7 +600,7 @@ steps:
         artifact_paths: "diagnostic_edmfx_trmm_box/*"
         agents:
           slurm_mem: 20GB
-      
+
       - label: ":genie: Diagnostic EDMFX TRMM stretched grid in a box"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
@@ -592,7 +616,7 @@ steps:
         artifact_paths: "diagnostic_edmfx_aquaplanet_tke/*"
         agents:
           slurm_mem: 20GB
-      
+
       - label: ":genie: Prognostic EDMFX advection test in a box"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
@@ -620,7 +644,7 @@ steps:
         soft_fail: true
         agents:
           slurm_mem: 20GB
-      
+
       - label: ":genie: Prognostic EDMFX Bomex in a box"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
@@ -637,7 +661,7 @@ steps:
         artifact_paths: "prognostic_edmfx_dycoms_rf01_box/*"
         agents:
           slurm_mem: 20GB
-      
+
       - label: ":genie: Prognostic EDMFX Rico in a column"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
@@ -738,7 +762,7 @@ steps:
       - label: "GPU: gpu_aquaplanet_dyamond"
         command:
           - mkdir -p gpu_aquaplanet_dyamond
-          - > 
+          - >
             julia --color=yes --project=examples examples/hybrid/driver.jl
             --config_file ${GPU_CONFIG_PATH}gpu_aquaplanet_dyamond.yml
         artifact_paths: "gpu_aquaplanet_dyamond/*"
