--- a/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_impvdiff.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist_impvdiff.yml
@@ -2,10 +2,12 @@ precip_model: "0M"
 vert_diff: "true"
 z_elem: 20
 dz_bottom: 100
-dt_save_to_disk: "6hours"
+dt_save_to_disk: "6days"
 initial_condition: "MoistBaroclinicWave"
-dt: "20secs"
-t_end: "6hours"
-job_id: "sphere_baroclinic_wave_rhoe_equilmoist_expvdiff"
+implicit_diffusion: true
+max_newton_iters_ode: 2
+dt: "400secs"
+t_end: "6days"
+job_id: "sphere_baroclinic_wave_rhoe_equilmoist_impvdiff"
 moist: "equil"
 toml: [toml/sphere_baroclinic_wave_rhoe_equilmoist_expvdiff.toml]
