CompatHelper: bump compat for ClimaCore to 0.11, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -50,12 +50,12 @@ ArtifactWrappers = "0.2"
 Artifacts = "1"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7.25"
+CPUSummary = "0.2"
 ClimaComms = "0.5.6"
-ClimaCore = "0.10.55"
+ClimaCore = "0.10.55, 0.11"
 ClimaTimeSteppers = "0.7.14"
 CloudMicrophysics = "0.15.0"
 Colors = "0.12"
-CPUSummary = "0.2"
 Dates = "1"
 Dierckx = "0.5"
 DiffEqBase = "6"
