Change depot in longrun pipeline.yml

--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -9,12 +9,9 @@ env:
   JULIA_NVTX_CALLBACKS: gc
   OMPI_MCA_opal_warn_on_missing_libcuda: 0
   JULIA_MAX_NUM_PRECOMPILE_FILES: 100
-  JULIA_DEPOT_PATH: "${BUILDKITE_BUILD_PATH}/${BUILDKITE_PIPELINE_SLUG}/depot/cpu"
+  JULIA_DEPOT_PATH: "${BUILDKITE_BUILD_PATH}/${BUILDKITE_PIPELINE_SLUG}/depot/default"
   JULIA_CPU_TARGET: 'broadwell;skylake'
-  CONFIG_PATH: "config/model_configs"
-  GPU_CONFIG_PATH: "config/gpu_configs/"
-  PERF_CONFIG_PATH: "config/perf_configs"
-  MPI_CONFIG_PATH: "config/mpi_configs"
+  CONFIG_PATH: "config/longrun_configs"
   SLURM_KILL_BAD_EXIT: 1
   JULIA_NVTX_CALLBACKS: gc
   JULIA_CUDA_MEMORY_POOL: none
