Output relevant diagnostics
Bump the ref counter because some jobs are now run for longer

--- a/config/model_configs/box_density_current_test.yml
+++ b/config/model_configs/box_density_current_test.yml
@@ -14,3 +14,6 @@ config: "box"
 kappa_4: 1.0e7
 z_max: 6400.0
 job_id: "box_density_current_test"
+diagnostics:
+  - short_name: thetaa
+    period: 10secs
