--- a/config/model_configs/plane_density_current_test.yml
+++ b/config/model_configs/plane_density_current_test.yml
@@ -11,3 +11,6 @@ config: "plane"
 kappa_4: 1.0e7
 z_max: 6400.0
 job_id: "plane_density_current_test"
+diagnostics:
+  - short_name: thetaa
+    period: 900secs
