--- a/config/model_configs/sphere_held_suarez_rhoe_topography_dcmip.yml
+++ b/config/model_configs/sphere_held_suarez_rhoe_topography_dcmip.yml
@@ -8,3 +8,4 @@ forcing: "held_suarez"
 dt: "200secs"
 viscous_sponge: true
 job_id: "sphere_held_suarez_rhoe_topography_dcmip"
+netcdf_interpolate_z_over_msl: true
