--- a/config/model_configs/plane_agnesi_mountain_test_stretched.yml
+++ b/config/model_configs/plane_agnesi_mountain_test_stretched.yml
@@ -15,3 +15,7 @@ z_max: 25000.0
 topography: "Agnesi"
 job_id: "plane_agnesi_mountain_test_stretched"
 toml: [toml/plane_agnesi_mountain_test_stretched.toml]
+netcdf_interpolate_z_over_msl: true
+diagnostics:
+  - short_name: wa
+    period: 4hours
