--- a/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric.yml
+++ b/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric.yml
@@ -1,11 +1,11 @@
 rad: "allskywithclear"
-dt_save_to_disk: "18hours"
+dt_save_to_disk: "1days"
 rayleigh_sponge: true
 orographic_gravity_wave: "raw_topo"
 z_elem: 25
 dt: "400secs"
 surface_setup: "DefaultMoninObukhov"
-t_end: "18hours"
+t_end: "15hours"
 non_orographic_gravity_wave: true
 dz_bottom: 300.0
 vert_diff: "true"
@@ -17,3 +17,4 @@ surface_temperature: "ZonallyAsymmetric"
 job_id: "sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric"
 moist: "equil"
 toml: [toml/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_raw_zonallyasymmetric.toml]
+netcdf_interpolate_z_over_msl: true
