--- a/config/model_configs/sphere_baroclinic_wave_rhoe.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe.yml
@@ -3,3 +3,12 @@ initial_condition: "DryBaroclinicWave"
 dt: "400secs"
 t_end: "10days"
 job_id: "sphere_baroclinic_wave_rhoe"
+diagnostics:
+  - short_name: pfull
+    period: 1days
+  - short_name: wa
+    period: 1days
+  - short_name: va
+    period: 1days
+  - short_name: rv
+    period: 1days
