--- a/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe_equilmoist.yml
@@ -5,3 +5,14 @@ initial_condition: "MoistBaroclinicWave"
 dt: "450secs"
 job_id: "sphere_baroclinic_wave_rhoe_equilmoist"
 moist: "equil"
+diagnostics:
+  - short_name: pfull
+    period: 1days
+  - short_name: wa
+    period: 1days
+  - short_name: va
+    period: 1days
+  - short_name: rv
+    period: 1days
+  - short_name: hus
+    period: 1days
