--- a/config/model_configs/sphere_baroclinic_wave_rhoe_topography_dcmip_rs.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe_topography_dcmip_rs.yml
@@ -7,3 +7,13 @@ t_end: "6days"
 use_reference_state: false
 dt: "200secs"
 job_id: "sphere_baroclinic_wave_rhoe_topography_dcmip_rs"
+netcdf_interpolate_z_over_msl: true
+diagnostics:
+  - short_name: pfull
+    period: 1days
+  - short_name: wa
+    period: 1days
+  - short_name: va
+    period: 1days
+  - short_name: rv
+    period: 1days
